--- a/chat-front/src/app/globals.css
+++ b/chat-front/src/app/globals.css
@@ -19,12 +19,13 @@
   }
 }
 
-* {
+/* * {
   border: solid 1px red;
-}
+} */
 
 body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
